# test_mini_project

./: README.md
backend-rust/: .env.example  Cargo.toml
backend-rust/migrations/: 001_init.sql
backend-rust/src/: db.rs  main.rs  models.rs
backend-rust/src/handlers/: auth.rs  barang.rs  mod.rs
backend-rust/src/middleware/: auth.rs
frontend-react/: package-lock.json  package.json
frontend-react/src/: App.jsx  main.jsx
frontend-react/src/api/: auth.js  barang.js
frontend-react/src/components/: Login.jsx  Register.jsx
frontend-react/src/components/layout/: navbar.jsx
frontend-react/src/components/masterbarang/: BarangForm.jsx  BarangTable.jsx
frontend-react/src/pages/: LoginPage.jsx  MasterBarangPage.jsx  RegisterPage.jsx
