[package]
name = "backend-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "macros"] }

dotenvy = "0.15"
argon2 = "0.5"
jsonwebtoken = "9"
password-hash = "0.5"
chrono = "0.4"

tower-http = { version = "0.5", features = ["cors"] }